--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@vant/area-data": "^1.2.3",
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "vant": "^3.4.3",
